--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-07-17 13:41+0000\n"
+"POT-Creation-Date: 2020-07-17 17:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -520,7 +520,7 @@ msgid "Total number of locked tokens"
 msgstr ""
 
 #: templates/dashboard.html:149
-msgid "‘Investors, team members & others with locked tokens"
+msgid "Investors, team members & others with locked tokens"
 msgstr ""
 
 #: templates/dashboard.html:158
