--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-09-23 01:09+0000\n"
+"POT-Creation-Date: 2020-09-24 11:27+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1482,7 +1482,7 @@ msgid "Origin Products"
 msgstr ""
 
 #: templates/landing.html:65
-msgid "Origin’s suite of products is revolutionizing how people shop and conduct business online. Effortlessly grow your savings, create a decentralized e-commerce store or buy and sell on our marketplace app."
+msgid "Origin’s suite of products is revolutionizing how people shop and conduct business online. Effortlessly create a decentralized e-commerce store with Dshop and earn competitive yields with the Origin Dollar."
 msgstr ""
 
 #: templates/landing.html:67
