New Crowdin updates (#540)
* New translations messages.pot (Romanian)

* New translations messages.pot (Croatian)

* New translations messages.pot (Chinese Traditional)

* New translations messages.pot (Urdu (Pakistan))

* New translations messages.pot (Vietnamese)

* New translations messages.pot (Indonesian)

* New translations messages.pot (Bengali)

* New translations messages.pot (Thai)

* New translations messages.pot (Hindi)

* New translations messages.pot (Ukrainian)

* New translations messages.pot (Malay)

* New translations messages.pot (Telugu)

* New translations messages.pot (Uyghur)

* New translations messages.pot (Filipino)

* New translations messages.pot (Bosnian)

* New translations messages.pot (Serbian (Latin))

* New translations messages.pot (Chinese Simplified)

* New translations messages.pot (Turkish)

* New translations messages.pot (French)

* New translations messages.pot (Hebrew)

* New translations messages.pot (Spanish)

* New translations messages.pot (Arabic)

* New translations messages.pot (Czech)

* New translations messages.pot (Danish)

* New translations messages.pot (German)

* New translations messages.pot (Greek)

* New translations messages.pot (Italian)

* New translations messages.pot (Slovenian)

* New translations messages.pot (Japanese)

* New translations messages.pot (Korean)

* New translations messages.pot (Dutch)

* New translations messages.pot (Polish)

* New translations messages.pot (Portuguese)

* New translations messages.pot (Russian)

* New translations messages.pot (Slovak)

* New translations messages.pot (Lao)

* New translations messages.pot (Korean)

* New translations messages.pot (Chinese Simplified)

* New translations messages.pot (Russian)

* New translations messages.pot (German)

* New translations messages.pot (Korean)

* New translations messages.pot (Turkish)

* New translations messages.pot (Turkish)

*

--- a/translations/th/LC_MESSAGES/messages.po
+++ b/translations/th/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: originprotocolwebsite\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-09-25 21:58+0530\n"
-"PO-Revision-Date: 2020-06-07 22:34\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-06-18 05:32\n"
+"Last-Translator: \n"
 "Language-Team: Thai\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12,8 +12,10 @@ msgstr ""
 "Generated-By: Babel 2.7.0\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Crowdin-Project: originprotocolwebsite\n"
+"X-Crowdin-Project-ID: 308054\n"
 "X-Crowdin-Language: th\n"
 "X-Crowdin-File: /sparrowDom.redesign2019/messages.pot\n"
+"X-Crowdin-File-ID: 132\n"
 "Language: th_TH\n"
 
 #: config/strings_to_translate.py:4
