--- a/translations/de/LC_MESSAGES/messages.po
+++ b/translations/de/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: originprotocolwebsite\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-09-25 21:58+0530\n"
-"PO-Revision-Date: 2020-06-07 22:34\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-08-07 18:35\n"
+"Last-Translator: \n"
 "Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12,8 +12,10 @@ msgstr ""
 "Generated-By: Babel 2.7.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Crowdin-Project: originprotocolwebsite\n"
+"X-Crowdin-Project-ID: 308054\n"
 "X-Crowdin-Language: de\n"
 "X-Crowdin-File: /sparrowDom.redesign2019/messages.pot\n"
+"X-Crowdin-File-ID: 132\n"
 "Language: de_DE\n"
 
 #: config/strings_to_translate.py:4
@@ -95,11 +97,11 @@ msgstr ""
 
 #: templates/about.html:37 templates/landing.html:164
 msgid "Learn more about our team"
-msgstr ""
+msgstr "Erfahren Sie mehr über unser Team"
 
 #: templates/about.html:38 templates/landing.html:192
 msgid "Learn more about our investors"
-msgstr ""
+msgstr "Erfahren Sie mehr über unsere Investoren"
 
 #: templates/about.html:48 templates/landing.html:128
 msgid "Lower Fees"
@@ -338,7 +340,7 @@ msgstr "Origin Protocol - Entwickler"
 
 #: templates/flashes.html:4
 msgid "Buy or Sell on Origin"
-msgstr ""
+msgstr "Kaufen oder verkaufen bei Origin"
 
 #: templates/flashes.html:4
 msgid "Download App"
@@ -354,7 +356,7 @@ msgstr ""
 
 #: templates/components/email-input.html:8 templates/footer.html:9
 msgid "Enter your email"
-msgstr ""
+msgstr "Geben sie ihre E-Mail Adresse ein"
 
 #: templates/footer.html:23
 msgid "Overview"
@@ -390,7 +392,7 @@ msgstr "Entwickler"
 
 #: templates/footer.html:34
 msgid "Github"
-msgstr ""
+msgstr "Github"
 
 #: templates/footer.html:35
 msgid "Docs"
@@ -406,11 +408,11 @@ msgstr "Team"
 
 #: templates/footer.html:41 templates/navbar.html:76 templates/videos.html:21
 msgid "Investors"
-msgstr ""
+msgstr "Investoren"
 
 #: templates/footer.html:42
 msgid "OGN"
-msgstr ""
+msgstr "OGN"
 
 #: templates/footer.html:43
 msgid "Jobs"
@@ -450,7 +452,7 @@ msgstr "Zwietracht"
 
 #: templates/footer.html:78
 msgid "VK"
-msgstr ""
+msgstr "VK"
 
 #: templates/footer.html:86
 msgid "© 2019 Origin Protocol. All rights reserved."
