--- a/translations/ru/LC_MESSAGES/messages.po
+++ b/translations/ru/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: originprotocolwebsite\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-09-25 21:58+0530\n"
-"PO-Revision-Date: 2020-06-07 22:35\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-08-01 20:32\n"
+"Last-Translator: \n"
 "Language-Team: Russian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12,8 +12,10 @@ msgstr ""
 "Generated-By: Babel 2.7.0\n"
 "Plural-Forms: nplurals=4; plural=((n%10==1 && n%100!=11) ? 0 : ((n%10 >= 2 && n%10 <=4 && (n%100 < 12 || n%100 > 14)) ? 1 : ((n%10 == 0 || (n%10 >= 5 && n%10 <=9)) || (n%100 >= 11 && n%100 <= 14)) ? 2 : 3));\n"
 "X-Crowdin-Project: originprotocolwebsite\n"
+"X-Crowdin-Project-ID: 308054\n"
 "X-Crowdin-Language: ru\n"
 "X-Crowdin-File: /sparrowDom.redesign2019/messages.pot\n"
+"X-Crowdin-File-ID: 132\n"
 "Language: ru_RU\n"
 
 #: config/strings_to_translate.py:4
@@ -1145,7 +1147,7 @@ msgstr "Май 2017"
 
 #: templates/product.html:181
 msgid "Began initial development"
-msgstr "Начало первоначальной разработки"
+msgstr "Начало первичной разработки"
 
 #: templates/product.html:185
 msgid "September 2017"
@@ -1441,7 +1443,7 @@ msgstr "Дизайнер Продукта"
 
 #: templates/team.html:320
 msgid "Aure is a product designer with 10+ years of experience. Prior to joining Origin, Aure worked at multiple startups and Fortune 500 companies. In a past life, he was also a software engineer."
-msgstr "Аюр является дизайнером продуктов с 10 годами опыта. До прихода в Origin Аюр работал во многих стартапах и компаниях из Fortune 500. До этого он также был разработчиком программного обеспечения."
+msgstr "Аюр - дизайнер по продукту с 10ти летним опытом. До перехода в Origin Аюр работал во многих стартапах и компаниях из Fortune 500. До этого он также был разработчиком программного обеспечения."
 
 #: templates/team.html:334
 msgid "Advisors"
