--- a/translations/zh_Hans/LC_MESSAGES/messages.po
+++ b/translations/zh_Hans/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: originprotocolwebsite\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-09-25 21:58+0530\n"
-"PO-Revision-Date: 2020-06-07 22:34\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-07-17 14:44\n"
+"Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -12,8 +12,10 @@ msgstr ""
 "Generated-By: Babel 2.7.0\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Crowdin-Project: originprotocolwebsite\n"
+"X-Crowdin-Project-ID: 308054\n"
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /sparrowDom.redesign2019/messages.pot\n"
+"X-Crowdin-File-ID: 132\n"
 "Language: zh_CN\n"
 
 #: config/strings_to_translate.py:4
@@ -767,7 +769,7 @@ msgstr "shoporigin.com"
 
 #: templates/landing.html:77
 msgid "Available on"
-msgstr "也可以通过以下方式使用Origin"
+msgstr "也可以通过以下方式购买Origin"
 
 #: templates/landing.html:87
 msgid "The sharing economy is a massive opportunity waiting to be disrupted"
