Compile new translations

--- a/translations/es/LC_MESSAGES/messages.po
+++ b/translations/es/LC_MESSAGES/messages.po
@@ -1511,7 +1511,7 @@ msgstr "Tarifas más bajas"
 #: templates/landing.html:104
 #, python-format
 msgid "Buyers and sellers share 20-30%% in savings when middlemen are removed"
-msgstr "Los compradores y vendedores comparten 20-30% de ahorro cuando se eliminan los intermediarios"
+msgstr "Los compradores y vendedores comparten 20-30%% de ahorro cuando se eliminan los intermediarios"
 
 #: templates/landing.html:110
 msgid "Better incentives"
@@ -2163,7 +2163,7 @@ msgstr "Gana OGN por referir compradores"
 #: templates/stayHomeStore.html:309
 #, python-format
 msgid "For April’s Origin Rewards campaign, we will be donating 100%% of all proceeds* from the ‘Stay At Home’ Shop to The Coalition for Epidemic Preparedness Innovations (CEPI), who is developing a vaccine for COVID-19."
-msgstr "Para la campaña Origin Rewards de abril, donaremos 100% de todos los ingresos* de la tienda 'Stay At Home' a The Coalition for Epidemic Preparedness Innovations (CEPI), que está desarrollando una vacuna para COVID-19."
+msgstr "Para la campaña Origin Rewards de abril, donaremos 100%% de todos los ingresos* de la tienda 'Stay At Home' a The Coalition for Epidemic Preparedness Innovations (CEPI), que está desarrollando una vacuna para COVID-19."
 
 #: templates/stayHomeStore.html:310
 msgid "In addition, to thank you for supporting our fundraising efforts, we have committed <b>50,000 OGN</b> to give away to our Origin community!"
@@ -2593,7 +2593,7 @@ msgstr "Comunidad"
 #: templates/team.html:553
 #, python-format
 msgid "100%% open-source."
-msgstr "100% código abierto."
+msgstr "100%% código abierto."
 
 #: templates/team.html:554
 msgid " contributors."
