--- a/translations/hr/LC_MESSAGES/messages.po
+++ b/translations/hr/LC_MESSAGES/messages.po
@@ -2992,7 +2992,7 @@ msgstr "Novo istraživanje, Podjela ekonomije: mogućnosti, utjecaji i poremeća
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "vlasnici imovine ... prema zadanom će se naplaćivati 14% naknade samo za domaćine. Do sada je zadana postavka da je Airbnb domaćinima naplatio 3 do 5 posto fiksne naknade"
+msgstr "vlasnici imovine ... prema zadanom će se naplaćivati 14%% naknade samo za domaćine. Do sada je zadana postavka da je Airbnb domaćinima naplatio 3 do 5 posto fiksne naknade"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
