--- a/translations/id/LC_MESSAGES/messages.po
+++ b/translations/id/LC_MESSAGES/messages.po
@@ -120,7 +120,7 @@ msgid "Centralized intermediaries often charge 20-30%% in\n"
 "          transaction fees. Airbnb grossed $2.6B in fees in 2017, while Uber\n"
 "          took home a monumental $11.8B in fees in 2018. Total sharing economy\n"
 "          fees are expected to cross $40B by 2020."
-msgstr "Perantara terpusat sering memungut biaya 20-30% pada\n"
+msgstr "Perantara terpusat sering memungut biaya 20-30%% pada\n"
 "           biaya transaksi. Airbnb meraup 2,6 milyar dolar pada biaya upah pada 2017, sementara Uber\n"
 "           meraup keuntungan 11,8 milyar dolar dalam biaya upah pada tahun 2018. Total niaya pada perekonomian berbagi\n"
 "           diperkirakan akan melampaui 40 milyar dolar pada tahun 2020."
@@ -2636,7 +2636,7 @@ msgstr "Komunitas"
 #: templates/team.html:553
 #, python-format
 msgid "100%% open-source."
-msgstr "100% open-source."
+msgstr "100%% open-source."
 
 #: templates/team.html:554
 msgid " contributors."
