--- a/translations/it/LC_MESSAGES/messages.po
+++ b/translations/it/LC_MESSAGES/messages.po
@@ -279,7 +279,7 @@ msgstr "Costruisci il tuo marketplace <br>peer-to-peer<br>"
 #: templates/creator.html:21
 #, python-format
 msgid "Blockchain enabled.<br>No code required.<br>100%% free to operate."
-msgstr "Basato sulla blockchain.<br>Nessun codice richiesto.<br>Liberi di operare al 100%."
+msgstr "Basato sulla blockchain.<br>Nessun codice richiesto.<br>Liberi di operare al 100%%."
 
 #: templates/creator.html:24 templates/creator.html:100
 #: templates/creator.html:223
@@ -516,7 +516,7 @@ msgstr "Numero totale di token bloccati"
 
 #: templates/dashboard.html:149
 msgid "Investors, team members & others with locked tokens"
-msgstr "Investitori, membri del team % altri con token bloccati (locked tokens)"
+msgstr "Investitori, membri del team %% altri con token bloccati (locked tokens)"
 
 #: templates/dashboard.html:158
 msgid "Total number of tokens founders have sold"
@@ -3001,7 +3001,7 @@ msgstr "La nuova ricerca, Sharing Economy: Opportunities, Impacts & Disruptors 2
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "gestori di proprietà ... per impostazione predefinita verrà addebitata una commissione di solo host del 14%. Fino ad ora, il default era che Airbnb addebitato agli host una commissione fissa dal 3 al 5%"
+msgstr "gestori di proprietà ... per impostazione predefinita verrà addebitata una commissione di solo host del 14%%. Fino ad ora, il default era che Airbnb addebitato agli host una commissione fissa dal 3 al 5%%"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
