--- a/translations/nl/LC_MESSAGES/messages.po
+++ b/translations/nl/LC_MESSAGES/messages.po
@@ -2992,7 +2992,7 @@ msgstr "Het nieuwe onderzoek, Sharing Economy: Opportunities, Impacts & Disrupto
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "property managers ... worden standaard 14% host-only kosten in rekening gebracht. Tot nu toe was de standaardwaarde dat Airbnb hosts een vast tarief van 3 tot 5 procent in rekening bracht"
+msgstr "property managers ... worden standaard 14%% host-only kosten in rekening gebracht. Tot nu toe was de standaardwaarde dat Airbnb hosts een vast tarief van 3 tot 5 procent in rekening bracht"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
