--- a/translations/pt/LC_MESSAGES/messages.po
+++ b/translations/pt/LC_MESSAGES/messages.po
@@ -2992,7 +2992,7 @@ msgstr "A nova pesquisa, Economia de compartilhamento: oportunidades, impactos e
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "gerentes de propriedade ... serão cobrados uma taxa de apenas 14% do host por padrão. Até agora, o padrão era o Airbnb cobrar dos hosts uma taxa fixa de 3 a 5 por cento"
+msgstr "gerentes de propriedade ... serão cobrados uma taxa de apenas 14%% do host por padrão. Até agora, o padrão era o Airbnb cobrar dos hosts uma taxa fixa de 3 a 5 por cento"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
@@ -3777,7 +3777,7 @@ msgstr "Prevê-se que as reservas brutas na economia compartilhada excedam US $ 
 #: templates/whitepaper/why.html:130
 #, python-format
 msgid "While the overall market continues to boom, value capture has only shifted in favor to the regional monopolies. Recently, Airbnb dramatically increased fees for hosts in many global regions, from 3 to 5 percent to 14 percent<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Similarly, Uber’s advertised 25%% commission rate is actually significantly higher when factoring in additional fees that are passed onto their drivers. For example, the median commission that Uber charges in San Francisco was recently estimated at 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
-msgstr "Enquanto o mercado geral continua crescendo, a captura de valor mudou apenas em favor dos monopólios regionais. Recentemente, o Airbnb aumentou drasticamente as taxas para hosts em muitas regiões do mundo, de 3 para 5% para 14%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Da mesma forma, a taxa de comissão 25%% anunciada pela Uber é realmente significativamente mais alta ao considerar taxas adicionais que são repassadas aos seus motoristas. Por exemplo, a comissão mediana cobrada pela Uber em São Francisco foi recentemente estimada em 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
+msgstr "Enquanto o mercado geral continua crescendo, a captura de valor mudou apenas em favor dos monopólios regionais. Recentemente, o Airbnb aumentou drasticamente as taxas para hosts em muitas regiões do mundo, de 3 para 5%% para 14%%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Da mesma forma, a taxa de comissão 25%% anunciada pela Uber é realmente significativamente mais alta ao considerar taxas adicionais que são repassadas aos seus motoristas. Por exemplo, a comissão mediana cobrada pela Uber em São Francisco foi recentemente estimada em 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
 
 #: templates/whitepaper/why.html:132
 msgid "The world is also moving more and more to global versus local commerce. Sellers are able to provide services (and many times products and goods) to customers across the world. Currently, a Lyft passenger would not be able to ride on the Didi ChuXing ride-sharing network (China’s largest ride-sharing company) save for the fact that the two companies signed a deep partnership that was months in the making and involved a mutual investor pouring hundreds of millions of dollars into both companies. In a global, but openly distributed marketplace, a customer would be able to purchase services from suppliers without a need for new accounts, complicated currency exchanges, or prerequisite negotiated deals."
