--- a/translations/ro/LC_MESSAGES/messages.po
+++ b/translations/ro/LC_MESSAGES/messages.po
@@ -2993,7 +2993,7 @@ msgstr "Noua cercetare, Sharing Economy: Opportunity, Impacts & Disruptors 2017-
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "Administratorii de proprietăți ... vor fi percepute în mod implicit o taxă de 14% doar pentru gazdă. Până acum, valoarea implicită a fost că Airbnb a taxat gazdele cu o taxă fixă de la 3 la 5 la sută"
+msgstr "Administratorii de proprietăți ... vor fi percepute în mod implicit o taxă de 14%% doar pentru gazdă. Până acum, valoarea implicită a fost că Airbnb a taxat gazdele cu o taxă fixă de la 3 la 5 la sută"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
