--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -2992,7 +2992,7 @@ msgstr "Nový výskum, zdieľaná ekonomika: príležitosti, dopady a narušenia
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "správcom nehnuteľností ... bude v predvolenom nastavení účtovaný poplatok iba pre hostiteľa vo výške 14%. Doteraz bolo predvolené, že spoločnosť Airbnb účtovala hostiteľom pevný poplatok vo výške 3 až 5 percent"
+msgstr "správcom nehnuteľností ... bude v predvolenom nastavení účtovaný poplatok iba pre hostiteľa vo výške 14%%. Doteraz bolo predvolené, že spoločnosť Airbnb účtovala hostiteľom pevný poplatok vo výške 3 až 5 percent"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
