--- a/translations/tr/LC_MESSAGES/messages.po
+++ b/translations/tr/LC_MESSAGES/messages.po
@@ -2639,7 +2639,7 @@ msgstr "Topluluk"
 #: templates/team.html:553
 #, python-format
 msgid "100%% open-source."
-msgstr "% 100 açık kaynak"
+msgstr "%% 100 açık kaynak"
 
 #: templates/team.html:554
 msgid " contributors."
