--- a/translations/vi/LC_MESSAGES/messages.po
+++ b/translations/vi/LC_MESSAGES/messages.po
@@ -2629,7 +2629,7 @@ msgstr "Cộng đồng"
 #: templates/team.html:553
 #, python-format
 msgid "100%% open-source."
-msgstr "100% mã nguồn mở."
+msgstr "100%% mã nguồn mở."
 
 #: templates/team.html:554
 msgid " contributors."
@@ -3030,7 +3030,7 @@ msgstr "Nghiên cứu mới, Nền kinh tế chia sẻ: Cơ hội, tác động 
 
 #: templates/whitepaper/footnote.html:51
 msgid "property managers...will be charged a 14 percent host-only fee by default. Until now, the default was that Airbnb charged hosts a 3 to 5 percent fixed fee"
-msgstr "người quản lý tài sản... sẽ được tính phí 14% chỉ dành cho chủ nhà theo mặc định. Cho đến hiện tại, Airbnb mặc định tính phí lưu trữ với mức phí cố định 3 đến 5 phần trăm"
+msgstr "người quản lý tài sản... sẽ được tính phí 14%% chỉ dành cho chủ nhà theo mặc định. Cho đến hiện tại, Airbnb mặc định tính phí lưu trữ với mức phí cố định 3 đến 5 phần trăm"
 
 #: templates/whitepaper/footnote.html:55
 #, python-format
@@ -3863,7 +3863,7 @@ msgstr "Tổng lượng đặt phòng trên nền kinh tế chia sẻ dự kiế
 #: templates/whitepaper/why.html:130
 #, python-format
 msgid "While the overall market continues to boom, value capture has only shifted in favor to the regional monopolies. Recently, Airbnb dramatically increased fees for hosts in many global regions, from 3 to 5 percent to 14 percent<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Similarly, Uber’s advertised 25%% commission rate is actually significantly higher when factoring in additional fees that are passed onto their drivers. For example, the median commission that Uber charges in San Francisco was recently estimated at 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
-msgstr "Trong khi thị trường nói chung tiếp tục bùng nổ, việc nắm bắt giá trị chỉ thay đổi theo hướng có lợi cho các nhà độc quyền khu vực. Gần đây, Airbnb đã tăng đáng kể phí cho các chủ nhà ở nhiều khu vực, từ 3%% đến 5%% lên 14%%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Tương tự, chi phí hoa hồng thực tế của Uber sau khi tính thêm các khoản chi phí mà người lái xe phải chịu cao hơn nhiều so với mức 25%% mà Uber đề xuất. Ví dụ, theo ước tính gần đây, mức hoa hồng trung bình mà Uber thu tại San Francisco là 39% <a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
+msgstr "Trong khi thị trường nói chung tiếp tục bùng nổ, việc nắm bắt giá trị chỉ thay đổi theo hướng có lợi cho các nhà độc quyền khu vực. Gần đây, Airbnb đã tăng đáng kể phí cho các chủ nhà ở nhiều khu vực, từ 3%% đến 5%% lên 14%%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Tương tự, chi phí hoa hồng thực tế của Uber sau khi tính thêm các khoản chi phí mà người lái xe phải chịu cao hơn nhiều so với mức 25%% mà Uber đề xuất. Ví dụ, theo ước tính gần đây, mức hoa hồng trung bình mà Uber thu tại San Francisco là 39%% <a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
 
 #: templates/whitepaper/why.html:132
 msgid "The world is also moving more and more to global versus local commerce. Sellers are able to provide services (and many times products and goods) to customers across the world. Currently, a Lyft passenger would not be able to ride on the Didi ChuXing ride-sharing network (China’s largest ride-sharing company) save for the fact that the two companies signed a deep partnership that was months in the making and involved a mutual investor pouring hundreds of millions of dollars into both companies. In a global, but openly distributed marketplace, a customer would be able to purchase services from suppliers without a need for new accounts, complicated currency exchanges, or prerequisite negotiated deals."
