--- a/translations/zh_Hans/LC_MESSAGES/messages.po
+++ b/translations/zh_Hans/LC_MESSAGES/messages.po
@@ -2559,7 +2559,7 @@ msgstr "社区"
 #: templates/team.html:553
 #, python-format
 msgid "100%% open-source."
-msgstr "100% 开源。"
+msgstr "100%% 开源。"
 
 #: templates/team.html:554
 msgid " contributors."
@@ -3741,7 +3741,7 @@ msgstr "到2025年，共享经济的总预订额预计将超过3,350亿美元<a 
 #: templates/whitepaper/why.html:130
 #, python-format
 msgid "While the overall market continues to boom, value capture has only shifted in favor to the regional monopolies. Recently, Airbnb dramatically increased fees for hosts in many global regions, from 3 to 5 percent to 14 percent<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Similarly, Uber’s advertised 25%% commission rate is actually significantly higher when factoring in additional fees that are passed onto their drivers. For example, the median commission that Uber charges in San Francisco was recently estimated at 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
-msgstr "虽然整个市场持续蓬勃增长，但价值获取都被区域垄断者捕捉了。最近，Airbnb全球许多地区的房东费用大幅增加，从 3% 到 5% 到 14%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>。同样，如果考虑到转嫁到司机身上的额外费用，Uber所宣传的25%%佣金率实际上要高得多。举个例，Uber在旧金山收取的佣金中位数最近估计为39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>。"
+msgstr "虽然整个市场持续蓬勃增长，但价值获取都被区域垄断者捕捉了。最近，Airbnb全球许多地区的房东费用大幅增加，从 3%% 到 5%% 到 14%%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>。同样，如果考虑到转嫁到司机身上的额外费用，Uber所宣传的25%%佣金率实际上要高得多。举个例，Uber在旧金山收取的佣金中位数最近估计为39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>。"
 
 #: templates/whitepaper/why.html:132
 msgid "The world is also moving more and more to global versus local commerce. Sellers are able to provide services (and many times products and goods) to customers across the world. Currently, a Lyft passenger would not be able to ride on the Didi ChuXing ride-sharing network (China’s largest ride-sharing company) save for the fact that the two companies signed a deep partnership that was months in the making and involved a mutual investor pouring hundreds of millions of dollars into both companies. In a global, but openly distributed marketplace, a customer would be able to purchase services from suppliers without a need for new accounts, complicated currency exchanges, or prerequisite negotiated deals."
