--- a/translations/zh_Hant/LC_MESSAGES/messages.po
+++ b/translations/zh_Hant/LC_MESSAGES/messages.po
@@ -1705,7 +1705,7 @@ msgstr "在Origin上建立"
 
 #: templates/partners.html:22
 msgid "<strong>Teams all over the world are building their projects using Origin’s protocols. We are looking for more amazing people to <a href='#join_our_mission'>join our mission</a>.</strong>"
-msgstr "<strong>世界各地的團隊正在使用Origin的協議構建他們的項目。 我們正在尋找更多了不起的人來<a href='#join_our_mission'>加入我們的使命</a>。</ strong>"
+msgstr "<strong>世界各地的團隊正在使用Origin的協議構建他們的項目。 我們正在尋找更多了不起的人來<a href='#join_our_mission'>加入我們的使命</a>。</strong>"
 
 #: templates/partners.html:87
 msgid "View More"
@@ -1753,7 +1753,7 @@ msgstr "https://websitename.com"
 
 #: templates/partners.html:141
 msgid "<strong>Anything else we should know?</strong> (optional)"
-msgstr "<strong>我們應該知道的其他事情嗎？</ strong>（可選）"
+msgstr "<strong>我們應該知道的其他事情嗎？</strong>（可選）"
 
 #: templates/partners.html:153
 msgid "Become a Partner"
@@ -2604,7 +2604,7 @@ msgstr "全名"
 
 #: templates/components/presale-form.html:14 templates/tokens.html:51
 msgid "<strong>Desired allocation</strong>"
-msgstr "<strong>所需分配</ strong>"
+msgstr "<strong>所需分配</strong>"
 
 #: templates/components/presale-form.html:30 templates/tokens.html:67
 msgid "Citizenship"
@@ -2612,7 +2612,7 @@ msgstr "公民"
 
 #: templates/components/presale-form.html:284 templates/tokens.html:321
 msgid "<strong>ETH or BTC address you plan to send from?</strong> (optional)"
-msgstr "<strong>您計劃發送的ETH或BTC地址？</ strong>（可選）"
+msgstr "<strong>您計劃發送的ETH或BTC地址？</strong>（可選）"
 
 #: templates/tos.html:3 templates/tos.html:5
 msgid "Origin Protocol - Terms of Service"
@@ -3732,7 +3732,7 @@ msgstr "到2025年，共用經濟的總預訂額預計將超過3,350億美元<a 
 #: templates/whitepaper/why.html:130
 #, python-format
 msgid "While the overall market continues to boom, value capture has only shifted in favor to the regional monopolies. Recently, Airbnb dramatically increased fees for hosts in many global regions, from 3 to 5 percent to 14 percent<a class='whitepaper-footnote-link' href='#footnote13'>13</a>. Similarly, Uber’s advertised 25%% commission rate is actually significantly higher when factoring in additional fees that are passed onto their drivers. For example, the median commission that Uber charges in San Francisco was recently estimated at 39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>"
-msgstr "雖然整個市場持續蓬勃增長，但價值獲取都被區域壟斷者捕捉了。 最近，Airbnb全球許多地區的房東費用大幅增加，從 3% 到 5% 到 14%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>。 同樣，如果考慮到轉嫁到司機身上的額外費用，Uber所宣傳的25%%傭金率實際上要高得多。 舉個例，Uber在三藩市收取的傭金中位數最近估計為39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>。"
+msgstr "雖然整個市場持續蓬勃增長，但價值獲取都被區域壟斷者捕捉了。 最近，Airbnb全球許多地區的房東費用大幅增加，從 3%% 到 5%% 到 14%%<a class='whitepaper-footnote-link' href='#footnote13'>13</a>。 同樣，如果考慮到轉嫁到司機身上的額外費用，Uber所宣傳的25%%傭金率實際上要高得多。 舉個例，Uber在三藩市收取的傭金中位數最近估計為39%%<a class='whitepaper-footnote-link' href='#footnote14'>14</a>。"
 
 #: templates/whitepaper/why.html:132
 msgid "The world is also moving more and more to global versus local commerce. Sellers are able to provide services (and many times products and goods) to customers across the world. Currently, a Lyft passenger would not be able to ride on the Didi ChuXing ride-sharing network (China’s largest ride-sharing company) save for the fact that the two companies signed a deep partnership that was months in the making and involved a mutual investor pouring hundreds of millions of dollars into both companies. In a global, but openly distributed marketplace, a customer would be able to purchase services from suppliers without a need for new accounts, complicated currency exchanges, or prerequisite negotiated deals."
